<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginleft"
        android:text="@string/welcome"
        android:textSize="@dimen/welcome_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/welcome"
        android:layout_marginLeft="@dimen/marginleft"
        android:text="@string/hint" />

    <TextView
        android:id="@+id/redview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/red"
        android:layout_below="@id/hint"
        android:layout_alignLeft="@+id/hint"
        android:text="@string/red" />

    <TextView
        android:id="@+id/greenview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/green"
        android:layout_alignLeft="@+id/redview"
        android:layout_below="@id/redview"
        android:text="@string/green" />

    <TextView
        android:id="@+id/blueview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/blue"
        android:layout_alignLeft="@+id/redview"
        android:layout_below="@id/greenview"
        android:text="@string/blue" />

    <EditText
        android:id="@+id/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/green"
        android:layout_alignRight="@+id/green"
        android:layout_below="@id/hint"
        android:layout_toRightOf="@id/redview"
        android:hint="@string/hintInt"
        android:inputType="number"
        android:text="@string/num" >
    </EditText>

    <EditText
        android:id="@+id/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/red"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@id/greenview"
        android:hint="@string/hintInt"
        android:inputType="number"
        android:text="@string/num" >
    </EditText>

    <EditText
        android:id="@+id/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/green"
        android:layout_alignRight="@+id/green"
        android:layout_below="@+id/green"
        android:layout_toRightOf="@+id/blueview"
        android:hint="@string/hintInt"
        android:inputType="number"
        android:text="@string/num" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blue"
        android:layout_centerHorizontal="true"
        android:onClick="publishColor"
        android:text="@string/publish" />

</RelativeLayout>